# image_agnostic_segmentation

./: README.md
image_agnostic_segmentation_ros/: .gitignore  CMakeLists.txt  package.xml
image_agnostic_segmentation_ros/agnostic_segmentation/: agnostic_segmentation.py
image_agnostic_segmentation_ros/launch/: image_agnostic_segmentation_ros.launch
image_agnostic_segmentation_ros/prompts-config/: classes.txt  prompts.txt
image_agnostic_segmentation_ros/scripts/: segment_image_node.py
image_agnostic_segmentation_ros_msg/: CMakeLists.txt  package.xml
image_agnostic_segmentation_ros_msg/msg/: MaskedImage.msg
