<?xml version="1.0" ?>

<package format="2">
  <name>image_agnostic_segmentation_ros</name>
  <version>1.0.0</version>
  <description>The 'mask-rcnn' based on Detectron2 package provides real-time object region proposal.</description>

  <maintainer email="sakaguchi.taichi@em.ci.ritsumei.ac.jp">Sakaguchi Taichi</maintainer>
  <license>MIT</license>
  <url type="website">http://em.ci.ritsumei.ac.jp/</url>
  <author email="sakaguchi.taichi@em.ci.ritsumei.ac.jp">Sakaguchi Taichi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>